--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,9 @@ a {
   display: block;
   background-color: transparent;
 }
+.cerrar-sesion {
+  color: var(--blanco);
+}
 
 @media (min-width: 768px) {
   .contenedor-app {
@@ -136,6 +139,7 @@ aside  {
 .app-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: var(--gris2);
   padding: 4rem;
 }
@@ -272,7 +276,7 @@ aside  {
 .tarea-enter-active,
 .proyecto-enter-active {
   opacity: 1;
-  transition: opacity 500ms;
+  transition: opacity 200ms;
 }
 .tarea-exit,
 .proyecto-exit {
@@ -281,7 +285,7 @@ aside  {
 .tarea-exit-active,
 .proyecto-exit-active {
   opacity: 0;
-  transition: opacity 500ms;
+  transition: opacity 200ms;
 }
 
 .form-usuario {
@@ -327,3 +331,35 @@ aside  {
   opacity: .7;
 }
 
+.alerta {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 1rem 3rem;
+  border-radius: 1rem;
+  font-family: var(--headingFont);
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 2.2rem;
+  text-align: center;
+  width: 100%;
+}
+@media (min-width:768px) {
+  .alerta {
+      width: auto;
+      top: 30px;
+      right: 10px;
+      left: auto;
+  }
+}
+
+.alerta-ok {
+  background-color: rgb(109, 211, 109);
+  color: rgb(2, 103, 2);
+  box-shadow: 0px 0px 6px 2px black inset;
+}
+.alerta-error {
+  background-color: rgb(230, 78, 78);
+  color: var(--blanco);
+  box-shadow: 0px 0px 6px 2px black inset;
+}
