--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,19 @@ a {
   display: block;
   background-color: transparent;
 }
+.btn-proyectos{
+  width: 100%;
+  padding: 5px;
+  background: linear-gradient(
+    100deg
+    , #2f3848, #7694ad);
+    color: #edf2f6;
+    font-weight: 400;
+    text-shadow: 1px 1px 1px #000;
+}
+.btn-proyectos:hover{
+  box-shadow: 0px 0px 3px 0px #000;
+}
 .cerrar-sesion {
   color: var(--blanco);
 }
